--- a/ContentInfoScreen~.storyboard
+++ b/ContentInfoScreen~.storyboard
@@ -3,6 +3,8 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,6 +27,21 @@
             </objects>
             <point key="canvasLocation" x="-42.028985507246382" y="-15.401785714285714"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="i3J-f0-nlk">
+            <objects>
+                <viewController storyboardIdentifier="UIViewController-tPx-QQ-orj" id="tPx-QQ-orj" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="yke-kh-rc6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="SvG-4G-gG4"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3a9-8h-r8U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2271" y="25"/>
+        </scene>
         <!--StartScreen-->
         <scene sceneID="iZj-ew-l7p">
             <objects>
@@ -36,4 +53,9 @@
             <point key="canvasLocation" x="868.11594202898561" y="-15.401785714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
