--- a/NanoChallenge-MyFirstApp/Game/Views/GameScreen.storyboard
+++ b/NanoChallenge-MyFirstApp/Game/Views/GameScreen.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,11 +15,11 @@
             <objects>
                 <viewController storyboardIdentifier="UIViewController-w4g-zA-9h9" id="w4g-zA-9h9" customClass="GameViewController" customModule="NanoChallenge_MyFirstApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2gg-X0-m88">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zl5-uA-XFc">
-                                <rect key="frame" x="16" y="52" width="48.5" height="46.5"/>
+                                <rect key="frame" x="15.999999999999996" y="52" width="48.666666666666657" height="47"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="tintColor" name="AccentColor"/>
                                 <state key="normal">
@@ -28,7 +28,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bLR-NS-m7I">
-                                <rect key="frame" x="349.5" y="52" width="48.5" height="46.5"/>
+                                <rect key="frame" x="363.66666666666669" y="52" width="48.333333333333314" height="47"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <color key="tintColor" name="AccentColor"/>
                                 <state key="normal">
@@ -39,31 +39,77 @@
                                     <segue destination="vAX-J3-NCR" kind="presentation" id="LrE-mb-fnD"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rqA-Fg-ieo">
-                                <rect key="frame" x="184" y="433" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Tracking" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uvi-YG-crF">
+                                <rect key="frame" x="16" y="108" width="396" height="38.333333333333343"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="Tracking - W" translatesAutoresizingMaskIntoConstraints="NO" id="hU5-ga-HsH">
+                                <rect key="frame" x="16" y="178" width="396" height="519"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="3/10" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Yn-QN-kZq">
+                                <rect key="frame" x="0.0" y="864.66666666666652" width="428" height="19.333333333333371"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Aqf-Dw-fho">
+                                <rect key="frame" x="16" y="776.66666666666663" width="182" height="64"/>
+                                <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="YMR-Mx-Nw0"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title=" Wrong" image="xmark.circle.fill" catalog="system"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Js2-w0-isx">
+                                <rect key="frame" x="230" y="776.66666666666663" width="182" height="64"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="z2b-Wh-DRM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title=" Correct" image="checkmark.circle.fill" catalog="system"/>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="TOa-XC-HNw"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="rqA-Fg-ieo" firstAttribute="centerX" secondItem="2gg-X0-m88" secondAttribute="centerX" id="MMy-BN-cq6"/>
-                            <constraint firstItem="TOa-XC-HNw" firstAttribute="trailing" secondItem="bLR-NS-m7I" secondAttribute="trailing" constant="16" id="QIs-vy-Fg9"/>
-                            <constraint firstItem="rqA-Fg-ieo" firstAttribute="centerY" secondItem="2gg-X0-m88" secondAttribute="centerY" id="Vow-FK-lbH"/>
-                            <constraint firstItem="zl5-uA-XFc" firstAttribute="top" secondItem="TOa-XC-HNw" secondAttribute="top" constant="8" id="gQf-7w-zqP"/>
-                            <constraint firstItem="bLR-NS-m7I" firstAttribute="top" secondItem="TOa-XC-HNw" secondAttribute="top" constant="8" id="mta-0O-dsk"/>
-                            <constraint firstItem="zl5-uA-XFc" firstAttribute="leading" secondItem="TOa-XC-HNw" secondAttribute="leading" constant="16" id="uZg-B8-dLJ"/>
+                            <constraint firstItem="uvi-YG-crF" firstAttribute="leading" secondItem="TOa-XC-HNw" secondAttribute="leading" constant="16" id="0Cc-Zs-Wrs"/>
+                            <constraint firstItem="TOa-XC-HNw" firstAttribute="trailing" secondItem="bLR-NS-m7I" secondAttribute="trailing" constant="16" id="BJK-T3-i9f"/>
+                            <constraint firstItem="TOa-XC-HNw" firstAttribute="trailing" secondItem="uvi-YG-crF" secondAttribute="trailing" constant="16" id="BdP-Q0-oVd"/>
+                            <constraint firstItem="hU5-ga-HsH" firstAttribute="leading" secondItem="TOa-XC-HNw" secondAttribute="leading" constant="16" id="D8h-FX-a5N"/>
+                            <constraint firstItem="hU5-ga-HsH" firstAttribute="top" secondItem="uvi-YG-crF" secondAttribute="bottom" constant="32" id="GwA-6H-iTn"/>
+                            <constraint firstItem="Aqf-Dw-fho" firstAttribute="trailing" secondItem="TOa-XC-HNw" secondAttribute="centerX" constant="-16" id="NHG-oz-GlQ"/>
+                            <constraint firstItem="6Yn-QN-kZq" firstAttribute="leading" secondItem="TOa-XC-HNw" secondAttribute="leading" id="Spn-1j-8QR"/>
+                            <constraint firstItem="uvi-YG-crF" firstAttribute="top" secondItem="TOa-XC-HNw" secondAttribute="top" constant="64" id="VxF-5m-4w1"/>
+                            <constraint firstItem="zl5-uA-XFc" firstAttribute="top" secondItem="TOa-XC-HNw" secondAttribute="top" constant="8" id="Ziu-0v-ado"/>
+                            <constraint firstItem="6Yn-QN-kZq" firstAttribute="top" secondItem="Aqf-Dw-fho" secondAttribute="bottom" constant="24" id="a2T-Gg-MHn"/>
+                            <constraint firstItem="6Yn-QN-kZq" firstAttribute="trailing" secondItem="TOa-XC-HNw" secondAttribute="trailing" id="af9-zC-U88"/>
+                            <constraint firstItem="bLR-NS-m7I" firstAttribute="top" secondItem="TOa-XC-HNw" secondAttribute="top" constant="8" id="cmA-HW-o3s"/>
+                            <constraint firstItem="Js2-w0-isx" firstAttribute="leading" secondItem="TOa-XC-HNw" secondAttribute="centerX" constant="16" id="eA0-ks-tEz"/>
+                            <constraint firstItem="Aqf-Dw-fho" firstAttribute="leading" secondItem="TOa-XC-HNw" secondAttribute="leading" constant="16" id="ebF-Yy-CUX"/>
+                            <constraint firstItem="TOa-XC-HNw" firstAttribute="trailing" secondItem="Js2-w0-isx" secondAttribute="trailing" constant="16" id="jt1-Eo-ChR"/>
+                            <constraint firstItem="TOa-XC-HNw" firstAttribute="bottom" secondItem="6Yn-QN-kZq" secondAttribute="bottom" constant="8" id="koA-Xf-nc9"/>
+                            <constraint firstItem="Aqf-Dw-fho" firstAttribute="top" secondItem="hU5-ga-HsH" secondAttribute="bottom" constant="24" id="n5D-eG-QhV"/>
+                            <constraint firstItem="6Yn-QN-kZq" firstAttribute="top" secondItem="Js2-w0-isx" secondAttribute="bottom" constant="24" id="nbA-0L-sf9"/>
+                            <constraint firstItem="zl5-uA-XFc" firstAttribute="leading" secondItem="TOa-XC-HNw" secondAttribute="leading" constant="16" id="vnu-8p-5jh"/>
+                            <constraint firstItem="TOa-XC-HNw" firstAttribute="trailing" secondItem="hU5-ga-HsH" secondAttribute="trailing" constant="16" id="wRF-Cw-NAH"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="ELm-Yq-WZC"/>
                     <connections>
+                        <outlet property="cardImageView" destination="hU5-ga-HsH" id="rcQ-vv-OQe"/>
+                        <outlet property="correctButton" destination="Js2-w0-isx" id="k1e-CO-XZ1"/>
                         <outlet property="exitButton" destination="zl5-uA-XFc" id="UY4-r5-58m"/>
-                        <outlet property="teste" destination="rqA-Fg-ieo" id="2as-As-Lih"/>
+                        <outlet property="wrongButton" destination="Aqf-Dw-fho" id="kWL-BA-Fea"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="03b-2x-DWh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1797" y="-15"/>
+            <point key="canvasLocation" x="1795.7943925233644" y="-15.550755939524839"/>
         </scene>
         <!--UIViewController-tPx-QQ-orj-->
         <scene sceneID="Fam-XN-0zL">
@@ -75,13 +121,22 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Tracking - W" width="640" height="920"/>
+        <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
         <image name="questionmark.circle" catalog="system" width="128" height="121"/>
         <image name="x.circle" catalog="system" width="128" height="121"/>
+        <image name="xmark.circle.fill" catalog="system" width="128" height="121"/>
         <namedColor name="AccentColor">
             <color red="0.69599997997283936" green="0.460999995470047" blue="0.3059999942779541" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
