--- a/NanoChallenge-MyFirstApp/Game/Views/ContentInfoScreen.storyboard
+++ b/NanoChallenge-MyFirstApp/Game/Views/ContentInfoScreen.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,9 +16,46 @@
                     <view key="view" contentMode="scaleToFill" id="yke-kh-rc6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b4r-tB-A1H">
+                                <rect key="frame" x="337" y="52" width="45" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <color key="tintColor" name="AccentColor"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleColor" name="AccentColor"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spm-jF-8Va">
+                                <rect key="frame" x="32" y="119" width="350" height="38.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qvv-5o-TAT">
+                                <rect key="frame" x="16" y="174.5" width="382" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="SvG-4G-gG4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="SvG-4G-gG4" firstAttribute="trailing" secondItem="b4r-tB-A1H" secondAttribute="trailing" constant="32" id="5XV-Np-sVf"/>
+                            <constraint firstItem="b4r-tB-A1H" firstAttribute="top" secondItem="SvG-4G-gG4" secondAttribute="top" constant="8" id="I4I-tx-oTC"/>
+                            <constraint firstItem="qvv-5o-TAT" firstAttribute="leading" secondItem="SvG-4G-gG4" secondAttribute="leading" constant="16" id="Zmx-OK-fMQ"/>
+                            <constraint firstItem="spm-jF-8Va" firstAttribute="top" secondItem="b4r-tB-A1H" secondAttribute="bottom" constant="32" id="gOY-9a-6GK"/>
+                            <constraint firstItem="SvG-4G-gG4" firstAttribute="trailing" secondItem="qvv-5o-TAT" secondAttribute="trailing" constant="16" id="j0y-xc-xOA"/>
+                            <constraint firstItem="qvv-5o-TAT" firstAttribute="top" secondItem="spm-jF-8Va" secondAttribute="bottom" constant="17" id="osJ-eI-Ax3"/>
+                            <constraint firstItem="spm-jF-8Va" firstAttribute="leading" secondItem="SvG-4G-gG4" secondAttribute="leading" constant="32" id="tl6-d0-w8i"/>
+                            <constraint firstItem="SvG-4G-gG4" firstAttribute="trailing" secondItem="spm-jF-8Va" secondAttribute="trailing" constant="32" id="vWs-Cv-S9b"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bodyLabel" destination="qvv-5o-TAT" id="5vr-2k-u8S"/>
+                        <outlet property="doneButton" destination="b4r-tB-A1H" id="sq2-mx-yeF"/>
+                        <outlet property="subjectLabel" destination="spm-jF-8Va" id="zSg-Od-RHk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3a9-8h-r8U" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -25,6 +63,9 @@
         </scene>
     </scenes>
     <resources>
+        <namedColor name="AccentColor">
+            <color red="0.69599997997283936" green="0.460999995470047" blue="0.3059999942779541" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
